[gd_scene load_steps=20 format=2]

[ext_resource path="res://Model/buttons/RedditButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Control/randy_scripts/Profile.gd" type="Script" id=2]
[ext_resource path="res://textures/mountain.png" type="Texture" id=3]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Model/Labels/Back.tscn" type="PackedScene" id=5]
[ext_resource path="res://Model/Labels/Edit.tscn" type="PackedScene" id=6]
[ext_resource path="res://Model/buttons/WhatsappButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Model/buttons/FBButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Model/buttons/ShareButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://View/Screens_Randy/FadeIn.tscn" type="PackedScene" id=10]
[ext_resource path="res://View/util/MainMusic.tscn" type="PackedScene" id=11]
[ext_resource path="res://Starzy.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Model/Labels/Header.tscn" type="PackedScene" id=13]
[ext_resource path="res://Control/logic/DisplayCharacter.gd" type="Script" id=14]
[ext_resource path="res://textures/cloud2.png" type="Texture" id=15]
[ext_resource path="res://View/util/Character.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 12 )

[node name="ProfileScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 8.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -62.5773
margin_top = 4.08112
margin_right = 1579.42
margin_bottom = 1234.08
rect_scale = Vector2( 0.75, 0.6 )
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -172.0
margin_bottom = -226.0
custom_constants/margin_right = 300
custom_constants/margin_top = 100
custom_constants/margin_left = 300
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "	"
}

[node name="ColorRect" type="ColorRect" parent="TextureRect/MarginContainer"]
margin_left = 300.0
margin_top = 100.0
margin_right = 1170.0
margin_bottom = 904.0
color = Color( 0.192157, 0.392157, 0.552941, 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginContainer"]
margin_left = 300.0
margin_top = 100.0
margin_right = 1170.0
margin_bottom = 904.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 820.0
margin_bottom = 794.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 770.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
custom_constants/separation = 20

[node name="Label" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 770.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Username"
align = 2

[node name="MenuOptions" type="VBoxContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 770.0
margin_bottom = 680.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="Play" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions"]
margin_top = 77.0
margin_right = 770.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
text = "Account: Student"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions"]
margin_top = 165.0
margin_right = 770.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 2 )
text = "Email: User"

[node name="Profile" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions"]
margin_top = 253.0
margin_right = 770.0
margin_bottom = 311.0
custom_fonts/font = SubResource( 2 )
text = "School: NTU"

[node name="Exit" type="Label" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/MenuOptions"]
margin_top = 341.0
margin_right = 770.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 2 )
text = "Class: SS1"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 684.0
margin_right = 770.0
margin_bottom = 744.0
custom_constants/separation = 50
alignment = 1

[node name="Button" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 360.0
margin_bottom = 60.0
script = null

[node name="Button2" parent="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 410.0
margin_top = 0.0
margin_right = 770.0
margin_bottom = 60.0
script = null

[node name="FadeIn" parent="." instance=ExtResource( 10 )]
visible = false

[node name="MainMusic" parent="." instance=ExtResource( 11 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Header" parent="." instance=ExtResource( 13 )]
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "PROFILE"

[node name="CharacterBackground" type="TextureRect" parent="."]
margin_left = 101.981
margin_top = 49.2992
margin_right = 501.981
margin_bottom = 252.299
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" parent="." instance=ExtResource( 18 )]
position = Vector2( 309.125, 155.518 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 14 )

[node name="FBButton" parent="." instance=ExtResource( 8 )]
margin_left = 39.093
margin_top = 166.449
margin_right = 141.093
margin_bottom = 254.449

[node name="RedditButton" parent="." instance=ExtResource( 1 )]
margin_left = 33.1979
margin_top = 273.036
margin_right = 135.198
margin_bottom = 361.036

[node name="WAButton" parent="." instance=ExtResource( 7 )]
margin_left = 31.7349
margin_top = 379.623
margin_right = 133.735
margin_bottom = 467.623

[node name="ShareButton" parent="." instance=ExtResource( 9 )]
margin_left = 29.1638
margin_top = 485.103
margin_right = 131.164
margin_bottom = 573.103
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="FBButton" to="." method="_on_FBButton_pressed"]
[connection signal="pressed" from="RedditButton" to="." method="_on_RedditButton_pressed"]
[connection signal="pressed" from="WAButton" to="." method="_on_WAButton_pressed"]
[connection signal="pressed" from="ShareButton" to="." method="_on_ShareButton_pressed"]
